--- a/Turmity/Turmity.csproj
+++ b/Turmity/Turmity.csproj
@@ -43,9 +43,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Board.cs" />
-    <Compile Include="Interface1.cs" />
+    <Compile Include="DirectionList.cs" />
+    <Compile Include="Iboard.cs" />
+    <Compile Include="IDirectionList.cs" />
+    <Compile Include="MooreDirections.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="VonNeumannDirections.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
