--- a/Turmity/Turmity.csproj
+++ b/Turmity/Turmity.csproj
@@ -43,6 +43,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Board.cs" />
+    <Compile Include="Config.cs" />
     <Compile Include="CustomDirectionList.cs" />
     <Compile Include="DirectionList.cs" />
     <Compile Include="HeadState.cs" />
