--- a/Turmity/Turmity.csproj
+++ b/Turmity/Turmity.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Simulation.cs" />
     <Compile Include="StateInstruction.cs" />
     <Compile Include="TurmiteHead.cs" />
+    <Compile Include="TurmiteHeadCustom.cs" />
     <Compile Include="TurmiteHeadLangtonAnt.cs" />
     <Compile Include="VonNeumannDirections.cs" />
   </ItemGroup>
